--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
 
         <div class="info-text login">
             <h2 class="animation" style="--i:0; --j:20">Welcome Back!</h2>
-            <p class="animation" style="--i:1; --j:21">To TSEC Smart Campus</p>
+            <p class="animation" style="--i:1; --j:21">To Our Platform</p>
         </div>
 
 
@@ -94,7 +94,7 @@
 
         <div class="info-text register">
             <h2 class="animation" style="--i:17; --j:0;">Welcome!</h2>
-            <p class="animation" style="--i:18; --j:1;">To TSEC Smart Campus</p>
+            <p class="animation" style="--i:18; --j:1;">To Our Platform</p>
         </div>
 
     </div>
